--- a/src/main/resources/templates/new-job.html
+++ b/src/main/resources/templates/new-job.html
@@ -35,6 +35,24 @@
                         th:text="${location.value}"></option>
             </select>
         </div>
+        <div class="form-group">
+            <label th:for="coreCompetencies">Skill</label>
+            <select th:field="*{coreCompetencies}">
+                <option th:each="skill : *{coreCompetencies}"
+                        th:value="${skill.value}"
+                        th:text="${skill.value}"></option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label th:for="positionTypes">Position</label>
+            <select th:field="*{positionTypes}">
+                <option th:each="position : *{positionTypes}"
+                        th:value="${position.value}"
+                        th:text="${position.value}"></option>
+            </select>
+        </div>
+
+
 
         <input type="submit" value="Add Job" />
     </form>
