--- a/src/main/resources/templates/new-job.html
+++ b/src/main/resources/templates/new-job.html
@@ -38,9 +38,9 @@
         <div class="form-group">
             <label th:for="coreCompetencies">Skill</label>
             <select th:field="*{coreCompetencies}">
-                <option th:each="skill : *{coreCompetencies}"
-                        th:value="${skill.value}"
-                        th:text="${skill.value}"></option>
+                <option th:each="coreCompetency : *{coreCompetencies}"
+                        th:value="${coreCompetency.value}"
+                        th:text="${coreCompetency.value}"></option>
             </select>
         </div>
         <div class="form-group">
